partiel research done 1/2

--- a/giant_mix_project/composer.json
+++ b/giant_mix_project/composer.json
@@ -4,7 +4,7 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "elasticsearch/elasticsearch": "~7.0",
+    "elasticsearch/elasticsearch": "^7.13",
     "mongodb/mongodb": "^1.8",
     "predis/predis": "^1.1"
   }
